Fix single class page z-index issue

--- a/frontend/src/components/SingleClassComponent/Class.module.css
+++ b/frontend/src/components/SingleClassComponent/Class.module.css
@@ -2,8 +2,8 @@
 
 .classPageContainer {
     width: 100%;
+    height: 100%;
     position: relative;
-    height: 120vh;
 }
 
 .classBackgroundImageContainer {
@@ -11,7 +11,8 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
-    position: relative;
+    position: absolute;
+    width: 100%;
 }
 
 .classBackgroundImage {
@@ -19,7 +20,6 @@
     height: 1300px;
     max-width: 200%;
     position: absolute;
-    z-index: 1;
     top: -80px;
     filter: blur(50px);
 }
@@ -28,7 +28,7 @@
     margin: 70px 200px;
     width: 800px;
     z-index: 1;
-    position: absolute;
+    position: relative;
     top: 20px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
