--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -5,25 +5,26 @@
 #body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    /* height: 100%; */
+    min-height: 100vh;
+
 }
 
 #page-container {
     background-color: var(--themeDark);
-    /* position: relative; */
-    /* min-height: 100vh; */
-    height: 100%;
+    min-height: 100vh;
+    /* height: 100%; */
 }
 
 #root {
-    /* padding-top: 6rem; */
     /* padding-bottom: 2.5rem; */
     max-width: 1200px;
+    /* min-height: 100%; */
     min-height: 100vh;
+    overflow: hidden;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    /* background-color: rgb(74, 5, 6); */
     background-color: #FFFFFF;
 }
 
